# Cpp-Project-Template

./: Build-CMake.ps1  CITATION.cff  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: cmake-gtest.yaml  docker.yaml  make.yaml
src/: CMakeLists.txt
src/foo/: CMakeLists.txt
tests/: CMakeLists.txt
